--- a/kube/app/cronjob.yaml
+++ b/kube/app/cronjob.yaml
@@ -2,9 +2,8 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: s3-random-writer
-  namespace: random-writer
 spec:
-  schedule: "0 * * * *"
+  schedule: "* * * * *"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 3
@@ -16,12 +15,12 @@ spec:
           restartPolicy: Never
           containers:
             - name: writer
-              image: s3-random-writer:latest
+              image: ghcr.io/YOUR_ORG/s3-random-writer
               imagePullPolicy: IfNotPresent
               env:
                 - name: AWS_REGION
                   value: eu-central-1
                 - name: S3_BUCKET
-                  value: REPLACE_ME_BUCKET
+                  value: s3-random-writer-data-f6c0abb0
                 - name: S3_PREFIX
                   value: random
