--- a/kube/app/kustomization.yaml
+++ b/kube/app/kustomization.yaml
@@ -1,6 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
   - cronjob.yaml
 
 images:
-  - name: ghcr.io/YOUR_ORG/s3-random-writer
+  - name: ghcr.io/daniakd2003/s3-random-writer
     newTag: 0.0.1
