--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -28,6 +28,7 @@ jobs:
             exit 1
           fi
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "Using VERSION=$VERSION"
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -49,33 +50,49 @@ jobs:
         run: |
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
+          yq --version
 
       - name: Update image tag in kube/app/kustomization.yaml
         env:
           VERSION: ${{ steps.version.outputs.version }}
           IMAGE_NAME: ghcr.io/${{ github.repository }}/s3-random-writer
         run: |
+          set -euo pipefail
+          echo "VERSION=$VERSION"
+          echo "IMAGE_NAME=$IMAGE_NAME"
+
+          echo "Before yq:"
+          cat kube/app/kustomization.yaml
+
+          # Update .images[].newTag where .name matches IMAGE_NAME
           yq -i '
             (.images[] | select(.name == strenv(IMAGE_NAME)) | .newTag) = strenv(VERSION)
           ' kube/app/kustomization.yaml
 
-          echo "Updated file:"
+          echo "After yq:"
           cat kube/app/kustomization.yaml
+
+          # Fail fast if not updated
+          if ! grep -q "newTag: ${VERSION}" kube/app/kustomization.yaml; then
+            echo "ERROR: newTag was not updated to ${VERSION}"
+            exit 1
+          fi
 
       - name: Commit and push updated tag
         env:
           VERSION: ${{ steps.version.outputs.version }}
         run: |
+          set -euo pipefail
+
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
           git add kube/app/kustomization.yaml
 
-          # commit only if something changed
           if git diff --cached --quiet; then
             echo "No changes to commit (tag already up to date)"
             exit 0
           fi
 
-          git commit -m "chore: update s3-random-writer image tag to $VERSION"
+          git commit -m "chore: update s3-random-writer image tag to ${VERSION}"
           git push
