--- a/kube/app/cronjob.yaml
+++ b/kube/app/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: s3-random-writer
 spec:
-  schedule: "* * * * *"
+  schedule: "0 * * * *"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 3
